<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">WeGo</string>

    <!-- Debug -->
    <string name="default_user_name">elRic</string>
    <string name="default_group_name">WeGo</string>
    <string name="default_group_member">17</string>
    <string name="default_group_description">We are young and we love traveling</string>
    <string name="default_group_announcement">We are planning for a trip from Ho Chi Minh City to Nha Trang next week. Stay tuned!</string>

    <!-- Facebook id -->
    <string name="facebook_app_id">365186526974087</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_search">Search</string>

    <!-- Activity title -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_user_page">UserPageActivity</string>
    <string name="title_activity_user_message">UserMessageActivity</string>
    <string name="title_activity_current_trip">Current Trip</string>
    <string name="title_activity_trip_info">Trip Info</string>

    <!-- Login -->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="login_sign_up"><u>Sign Up for WeGo</u></string>

    <!-- Sign up -->
    <string name="signup_username_hint">Username</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_phone_hint">Phone number</string>
    <string name="signup_button">Sign up</string>
    <string name="signup_location_hint">Location</string>
    <string name="signup_cancel_button">Cancel</string>
    <string name="signup_terms_and_conditions">I agree to the Terms and Conditions of WeGo</string>
    <string name="signup_instruction">Fill in all information below and press Sign Up. Note that each email is used only once</string>

    <!-- Group info -->
    <string name="activity_group_info_admin">Admin</string>
    <string name="activity_group_info_image">Group Image</string>
    <string name="activity_group_info_announcement">Announcement</string>
    <string name="activity_group_info_request">Group Request</string>
    <string name="activity_group_info_message">Group Message</string>
    <string name="activity_group_info_member">Member</string>
    <string name="activity_group_info_join">Join</string>

    <!-- Fragment news -->
    <string name="title_fragment_news">News</string>
    <string name="fragment_news_button_status">Status</string>
    <string name="fragment_news_button_photo">Photo</string>
    <string name="fragment_news_button_review">Review</string>

    <!-- Item news -->
    <string name="item_news_actor_connector">" and "</string>
    <string name="item_news_actor_action_comment_post">" commented on a post"</string>
    <string name="item_news_actor_action_like_post">" liked a post"</string>
    <string name="item_news_actor_others">" others"</string>
    <string name="item_news_actor_action_comment_photo">" commented on a photo"</string>
    <string name="item_news_actor_action_like_photo">" liked a photo"</string>
    <string name="item_news_actor_action_like_review">" liked a review"</string>
    <string name="item_news_like">Like</string>
    <string name="item_news_comment">Comment</string>
    <string name="item_news_user_action_write_status"></string>
    <string name="item_news_user_action_post_photo">" post a photo"</string>
    <string name="item_news_user_action_write_review">" write a review about "</string>

    <!-- Fragment trip -->
    <string name="title_fragment_trip">Trip</string>
    <string name="fragment_trip_current">Current</string>
    <string name="fragment_trip_current_trip_day_remain">days remain</string>
    <string name="fragment_trip_suggest_trip">Suggest</string>
    <string name="fragment_trip_next_trip">Next</string>
    <string name="fragment_trip_button_create">Create Trip</string>
    <string name="fragment_trip_button_suggest">Suggest</string>

    <!-- Item trip -->
    <string name="item_trip_label_start_location">Start Location</string>
    <string name="item_trip_label_destination">Destination</string>
    <string name="item_trip_label_leader">Leader</string>
    <string name="item_trip_next_invite_friend">Invite Friend</string>
    <string name="item_trip_next_full">Full</string>

    <!-- Fragment social -->
    <string name="title_fragment_social">Social</string>
    <string name="fragment_social_section_friend_request">Friend Request</string>
    <string name="fragment_social_section_friend_message">Friend Message</string>
    <string name="fragment_social_section_group_invite">Group Invite</string>
    <string name="fragment_social_section_group_message">Group Message</string>
    <string name="fragment_social_button_friend">Friends</string>
    <string name="fragment_social_button_group">Groups</string>

    <!-- Item friend request -->
    <string name="item_friend_request_image">Profile Image</string>
    <string name="item_friend_request_decline">Decline</string>
    <string name="item_friend_request_accept">Accept</string>

    <!-- Item group invite -->
    <string name="item_group_invite_image">Group Image</string>
    <string name="item_group_invite_accept">Accept</string>
    <string name="item_group_invite_decline">Decline</string>

    <!-- Item friend message -->
    <string name="item_friend_message_image">Friend Image</string>

    <!-- Item group message -->
    <string name="item_group_message_image">Sender Image</string>

    <!-- Fragment more -->
    <string name="fragment_more_top_place">Top Place</string>
    <string name="fragment_more_top_photo">Top Photo</string>
    <string name="fragment_more_top_review">Top Review</string>
    <string name="fragment_more_button_wishlist">Wishlist</string>

    <!-- Activity user info -->
    <string name="activity_user_info_button_message">Message</string>

    <!-- Dialog comment -->
    <string name="dialog_comment_input">Write a comment...</string>
    <string name="dialog_comment_send">Send</string>
    <string name="dialog_comment_num_like_plural">" people like this"</string>
    <string name="dialog_comment_num_like_single">" person like this"</string>

    <!-- Dialog friend -->
    <string name="dialog_friend_sort">Sort</string>
    <string name="dialog_friend_search">Search</string>
    <string name="dialog_friend_no_friend">Your have no friend</string>

    <!-- Dialog group -->
    <string name="dialog_group_sort">Sort</string>
    <string name="dialog_group_create">Create Group</string>
    <string name="dialog_group_no_group">Your have no group</string>

    <!-- Dialog chat -->
    <string name="dialog_chat_input">Write your message...</string>
    <string name="dialog_chat_send">Send</string>

    <!-- Item group -->
    <string name="item_group_image">Group Image</string>

    <!-- Item comment -->
    <string name="item_comment_image">Image</string>

    <!-- Item chat contact -->
    <string name="item_chat_contact_image">Contact Image</string>

    <!-- Item chat current user -->
    <string name="item_chat_current_user_image">Current User Image</string>

    <!-- Dialog create group -->
    <string name="dialog_create_group_label_name">Name</string>
    <string name="dialog_create_group_label_description">Description</string>
    <string name="dialog_create_group_hint_name">How\'s your group called?</string>
    <string name="dialog_create_group_hint_description">What\'s your group do?</string>
    <string name="dialog_create_group_button_create">Create</string>

    <!-- Something -->
    <string name="space">" "</string>
    <string name="title_fragment_map">Map</string>
    <string name="title_fragment_more">More</string>
    <string name="title_fragment_members">Members</string>
    <string name="title_fragment_schedule">Schedule</string>
    <string name="title_fragment_friends">Friend</string>
    <string name="item_friend_info">Friend Info</string>
    <string name="item_friend_image">Profile Photo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="title_activity_group_info">GroupInfoActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="search_place_hint">WeGo</string>
    <string name="title_activity_user_photo">User Photo</string>
    <string name="title_activity_place_info">PlaceInfoActivity</string>
    <string name="activity_current_trip_member">Member</string>
    <string name="activity_current_trip_search">Search</string>
    <string name="activity_current_trip_places">Places</string>
    <string name="activity_current_trip_warn">Warning</string>
    <string name="departure_text_hint">Departure</string>
    <string name="destination_text_hint">Destination</string>
    <string name="next_step">Next Step</string>
    <string name="action_invite_user">Invite</string>
    <string name="title_activity_create_trip">Create Trip</string>
    <string name="title_activity_search">Search</string>

    <string-array name="destinations">
        <item>Nha Trang</item>
    </string-array>

    <!-- Dialog Photo -->
    <string name="dialog_photo_image">Image</string>
    <string name="dialog_photo_public">Pubic</string>
    <string name="dialog_photo_description">Describe your photo</string>
    <string name="dialog_photo_location">Location</string>
    <string name="dialog_photo_post">Post</string>
    
    <!-- Dialog Status -->
    <string name="dialog_status_location">Location</string>
    <string name="dialog_status_public">Public</string>
    <string name="dialog_status_content">What\'s on your mind?</string>
    <string name="dialog_status_post">Post</string>
    
    <!-- Item current place -->
    <string name="item_current_place_route">Search route</string>
    <string name="dialog_search_restaurant">Restaurant</string>
    <string name="dialog_search_hotel">Hotel</string>
    <string name="dialog_search_gas_station">Gas station</string>
    <string name="dialog_search_repair">Repair</string>
	<string name="dialog_search_custom_hint">Place name...</string>
	<string name="dialog_search_custom">Custom search</string>
	<string name="dialog_search_quick">Quick Search</string>
	
	<string name="item_search_place_route">Route</string>
	
	<string name="dialog_warning_title">Warning</string>
	<string name="dialog_warning_wait">Wait</string>
	<string name="dialog_warning_police">Police</string>
	<string name="dialog_warning_gather">Gather</string>
	<string name="dialog_warning_accident">Accident</string>
	<string name="dialog_warning_sent">Sent</string>
	<string name="dialog_warning_repair">Repair</string>
	<string name="dialog_warning_wait_message">Wait for me!</string>
	<string name="dialog_warning_police_message"></string>
</resources>