<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dialog_white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dialog_photo_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >

        <EditText
            android:id="@+id/dialog_photo_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_input"
            android:hint="@string/dialog_photo_location"
            android:inputType="text|textCapWords"
            android:textSize="14sp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/dialog_photo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_input"
            android:hint="@string/dialog_photo_description"
            android:inputType="text|textCapSentences|textMultiLine"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textSize="14sp"
            android:typeface="sans" />

        <ImageView
            android:id="@+id/dialog_photo_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/dialog_photo_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ho_chi_minh_full" />

        <CheckBox
            android:id="@+id/dialog_photo_public"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/dialog_photo_public"
            android:textColor="@color/gray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:id="@+id/dialog_photo_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/dialog_photo_input"
        android:alpha="0.5"
        android:background="@color/gray" />

    <Button
        android:id="@+id/dialog_photo_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_photo_divider"
        android:background="@drawable/background_action_bottom"
        android:text="@string/dialog_photo_post"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>