<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vn.edu.hcmut.wego.activity.LoginActivity" >

    <ProgressBar
        android:id="@+id/activity_login_progress_bar"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" 
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/activity_login_application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingTop="48dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:textStyle="bold" 
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:id="@+id/activity_login_field_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/activity_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_text"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:typeface="sans" >
        </EditText>

        <EditText
            android:id="@+id/activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_login_email"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_edit_text"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:textSize="14sp" >
        </EditText>
    </RelativeLayout>

    <Button
        android:id="@+id/activity_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/login_button"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.facebook.widget.LoginButton
        android:id="@+id/activity_login_facebook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/activity_login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/login_sign_up"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="bottom"/>

</LinearLayout>