<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dialog_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="6dp" >

        <TextView
            android:id="@+id/dialog_search_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/dialog_search_quick"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/dialog_search_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/background_action"
            android:contentDescription="@string/dialog_search_custom"
            android:src="@drawable/ic_action_input" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:alpha="0.5"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/dialog_search_quick_search_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp" >

        <ImageButton
            android:id="@+id/dialog_search_restaurant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_action"
            android:contentDescription="@string/dialog_search_restaurant"
            android:src="@drawable/ic_action_restaurant" />

        <ImageButton
            android:id="@+id/dialog_search_hotel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_action"
            android:contentDescription="@string/dialog_search_hotel"
            android:src="@drawable/ic_action_hotel" />

        <ImageButton
            android:id="@+id/dialog_search_gas_station"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_action"
            android:contentDescription="@string/dialog_search_gas_station"
            android:src="@drawable/ic_action_gas" />

        <ImageButton
            android:id="@+id/dialog_search_repair"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_action"
            android:contentDescription="@string/dialog_search_repair"
            android:src="@drawable/ic_action_repair" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_search_custom_search_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:visibility="gone" >

        <EditText
            android:id="@+id/dialog_search_custom_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_tag_search"
            android:drawableStart="@drawable/ic_tag_search"
            android:hint="@string/dialog_search_custom"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_search_result_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:alpha="0.5"
            android:background="@color/gray" />

        <ListView
            android:id="@+id/dialog_search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>