<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green" >

     <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingEnd="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="72dp"
        android:paddingStart="12dp"
        android:paddingTop="12dp" >

        <AutoCompleteTextView
            android:id="@+id/search_place_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_search_field"
            android:hint="@string/activity_current_trip_search"
            android:textSize="16sp"
            android:typeface="sans" >
        </AutoCompleteTextView>

        <ImageButton
            android:id="@+id/activity_current_trip_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_map_item"
            android:contentDescription="@string/activity_current_trip_member"
            android:src="@drawable/ic_action_member" />

        <ImageButton
            android:id="@+id/activity_current_trip_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_map_item"
            android:contentDescription="@string/activity_current_trip_warn"
            android:src="@drawable/ic_action_warn" />
    </LinearLayout>

</FrameLayout>