<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_action"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="12dp" >

    <ImageView
        android:id="@+id/item_friend_request_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/item_friend_request_image"
        android:scaleType="fitXY"
        android:src="@drawable/default_user" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_toEndOf="@id/item_friend_request_image"
        android:layout_toRightOf="@id/item_friend_request_image"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/item_friend_request_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SuperBo"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_friend_request_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ho Chi Minh City"
            android:textColor="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/item_friend_request_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_action"
            android:contentDescription="@string/item_friend_request_accept"
            android:src="@drawable/ic_action_accept" />

        <ImageButton
            android:id="@+id/item_friend_request_decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_action"
            android:contentDescription="@string/item_friend_request_decline"
            android:src="@drawable/ic_action_decline" />
    </LinearLayout>

</RelativeLayout>